style: fixed layout shift, strike thru on complete

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,12 +20,12 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     min-width: 320px;
     min-height: 100vh;
     background-color: $dark-mode;
-    padding: 3%;
+    padding: 10%;
   }
 .input-bar-container {
     display: flex;
